<resources>
    <string name="app_name">Monstre App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="image_success">Success Image</string>
    <string name="sucess_message">DEVICE ARE PAIRED</string>
    <string name="success_message">Click this tab to continue</string>
    <string name="add_device">ADDING NEW DEVICES</string>
    <string name="capture_desc">capture an image</string>
    <string name="take_picture_fail">Something goes wrong!</string>
    <string name="camera_fail">Failed to access camera</string>
    <string name="scanme">Scan-me!</string>
    <string name="email_validation_message">Email tidak sesuai</string>
    <string name="password_validation_message">Password tidak benar!</string>
    <string name="name_validation_message">Nama tidak sesuai</string>
    <string name="add_personality">Add Personality</string>
    <string name="something_wrong">Something goes wrong</string>
    <string name="article">Article</string>
    <string name="disconnect_message">Disconnected device</string>
    <string name="image_not_found">Image not found</string>
    <string name="no_article_found">Not found article</string>
</resources>