<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_selector"
        android:iconTint="@color/black"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history_selector"
        android:iconTint="@color/black"
        android:title="@string/history" />

    <item android:id="@+id/nav_placeholder"
        android:title="" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notification_selector"
        android:iconTint="@color/black"
        android:title="@string/notification" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_selector"
        android:iconTint="@color/black"
        android:title="@string/profile" />
</menu>