<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    android:background="@drawable/bg_dialog_rounded">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_error" />

    <TextView
        android:id="@+id/tv_dialog_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:paddingHorizontal="16dp"
        android:text="@string/disconnect_message"
        android:textAlignment="center"
        android:textColor="@color/blue_500"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_success_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="16dp"
        android:text="@string/success_message"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_dialog_success"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_success"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_success" />

</androidx.constraintlayout.widget.ConstraintLayout>